updating links in header and footer from #

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -116,7 +116,7 @@
 							Special</a></li>
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/personal_care/deo_perfumes">Deo &
 							Perfumes</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Chocolate & Candies</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/branded_foods/Chocolate_Candies">Chocolate & Candies</a></li>
 				</ul>
 				<p class="minimum-order">*Minimum order value is ₹149</p>
 			</div>
@@ -124,11 +124,11 @@
 				<ul class="info ul-category">
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/disposable_items">Disposable
 							Items</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Handwash</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/cleaning_household/Handwash">Handwash</a></li>
 					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/mask_sanitizer">Mask &
 							Sanitizer</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Spices</a></li>
-					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="#">Namkeen & Papad</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/grocery/Masala_Spices">Spices</a></li>
+					<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/user/branded_foods/Namkeen_Snacks">Namkeen & Papad</a></li>
 				</ul>
 				<br>
 			</div>
