--- a/views/header.ejs
+++ b/views/header.ejs
@@ -266,7 +266,7 @@
 						<li><a href="/user/branded_foods/pickles">Pickles</a></li>
 						<li><a href="/user/upvaas_fast_special">Upvaas Special</a></li>
 						<li><a href="/user/personal_care/deo_perfumes">Deo & Perfumes</a></li>
-						<li><a href="#">Chocolate & Candies</a></li>
+						<li><a href="/user/branded_foods/Chocolate_Candies">Chocolate & Candies</a></li>
 						<li><a href="/user/disposable_items">Disposable Items</a></li>
 						<li><a href="/aboutUs">About Us</a></li>
 						<li><a href="/contact">Contact</a></li>
